Give icons to the configuration windows

BUG: 306965
FIXED-IN: 4.10
-> Backport to the 4.9 branch if the Release Team decides to have 4.9.5
-> Markus: feel free to reopen if you find more instances
(cherry picked from commit 6e2333b9a5d43944ae499096bcd4a4372a3c2286)