resources/google/contacts/contactsresource.cpp
@@ -136,6 +136,7 @@ void ContactsResource::error( Error errCode, const QString &msg )
 void ContactsResource::configure( WId windowId )
 {
   SettingsDialog *settingsDialog = new SettingsDialog( windowId );
+  settingsDialog->setWindowIcon( KIcon( "im-google" ) );
 
   if ( settingsDialog->exec() == KDialog::Accepted ) {
     Q_EMIT configurationDialogAccepted();
